--- a/code/glucocheck/homepage/templates/tnc/tnc.html
+++ b/code/glucocheck/homepage/templates/tnc/tnc.html
@@ -10,7 +10,7 @@
 {% block content %}
 <section id="privacy">
 	<div class='section'>
-		<h2>Privacy Policy</h2><hr>
+		<a id="privacy"><h2>Privacy Policy</h2></a><hr>
 		<h3>Who We Are</h3>
 		<p>Glucocheck is a medical data visualization company dedicated to improving the lives of people with diabetes through relentless innovation and revolutionary customer experience. If you have any questions about this Notice, or how we collect and use your data, you can contact us at the address or phone number listed below in the how can you contact us about your information section.</p><br>
 
@@ -61,7 +61,7 @@
 
 <section id="terms">
 	<div class='section'>
-		<h2>Terms of Use</h2><hr>
+		<a id="terms"><h2>Terms of Use</h2></a><hr>
 		<p>This Website, <a href="www.glucocheck.com">www.glucocheck.com</a> (“Website”), is hosted by (" "), Inc. (“GlucoCheck”). GlucoCheck has also developed and offers other applications through the Website or through other means, including, without limitation, the t:connect Diabetes Management Application and the t:simulator App (referred to individually as a “Program” or collectively, with other applications, as the “Programs”).</p>
 		<p>IT IS IMPORTANT THAT YOU READ CAREFULLY AND UNDERSTAND THESE TERMS OF USE (THIS “AGREEMENT”). BY CLICKING THE “I ACCEPT” BUTTON OR USING THE WEBSITE AND/OR PROGRAMS, YOU ACKNOWLEDGE THAT (1) YOU HAVE READ AND REVIEWED THIS AGREEMENT IN ITS ENTIRETY, (2) YOU AGREE TO BE BOUND BY THIS AGREEMENT, (3) THE INDIVIDUAL SO CLICKING OR USING HAS THE POWER, AUTHORITY AND LEGAL RIGHT TO ENTER INTO THIS AGREEMENT ON BEHALF OF YOU (AS AN INDIVIDUAL IF ON YOUR OWN BEHALF OR AS A PARENT OR GUARDIAN FOR A MINOR (“YOU” OR “YOUR”)) AND, (4) BY SO CLICKING OR USING, THIS AGREEMENT CONSTITUTES BINDING AND ENFORCEABLE OBLIGATION BETWEEN YOU AND GlucoCheck. IF YOU DO NOT AGREE WITH ALL THE TERMS OF THIS AGREEMENT AND DO NOT AGREE TO BE BOUND BY THIS AGREEMENT, PLEASE DO NOT CLICK BELOW.</p>
 		<p>When you use any current or future version of the Website or Programs, you also will be subject to the terms and conditions set forth in this Agreement. Please print a copy of this Agreement for your records. We may, from time to time, modify the terms of this Agreement. When we make changes, we will post those in a new Terms of Use on this Website. Your use of the Website and Programs following any such modification constitutes your agreement to the terms of the modified Agreement. You should visit this page periodically to learn of any changes to this Agreement.</p>
@@ -128,7 +128,7 @@
 
 <section id="cookie">
 	<div class='section'>
-		<h2>Cookie Policy</h2><hr>
+		<a id="cookie"><h2>Cookie Policy</h2></a><hr>
 		<h3>What is a cookie?</h3>
 		<p>A cookie is a small data file that is stored on your device (e.g. computer, tablet or smartphone) when you visit a website or use an app. Cookies help websites and mobile apps remember things about you, such as IP addresses (the Internet access of a computer), domain names, and the type of computer and operating system being used, so you don’t have to enter certain pieces of information every time you visit your favorite sites.</p><br>
 		
@@ -146,7 +146,7 @@
 
 <section id="hipaa">	
 	<div class='section'>
-		<h2>Notice of HIPAA Privacy Practices</h2><hr>
+		<a id="hipaa"><h2>Notice of HIPAA Privacy Practices</h2></a><hr>
 		<p>The following summarizes your rights, your choices, and how your personal health information may be shared under this Notice of HIPAA Privacy Practices.</p><br>
 		
 		<h3>Applicability of this Notice</h3>
