--- a/code/glucocheck/homepage/templates/base/base.html
+++ b/code/glucocheck/homepage/templates/base/base.html
@@ -49,10 +49,10 @@
 				<div class="footer-links">
 					<div class="link-title">
 						<h4><a href="{% url 'tnc' %}">Legal Disclaimer</a></h4>
-						<a href="{% url 'tnc' %}#privacy"><small>Privacy Policy</small></a><br>
-						<a href="{% url 'tnc' %}#terms"><small>Terms of Use</small></a><br>
-						<a href="{% url 'tnc' %}#cookie"><small>Cookie Policy</small></a><br>
-						<a href="{% url 'tnc' %}#hipaa"><small>HIPAA Privacy</small></a>
+						<small><a href="{% url 'tnc' %}#privacy">Privacy Policy</a></small><br>
+						<small><a href="{% url 'tnc' %}#terms">Terms of Use</a></small><br>
+						<small><a href="{% url 'tnc' %}#cookie">Cookie Policy</a></small><br>
+						<small><a href="{% url 'tnc' %}#hipaa">HIPAA Privacy</a></small>
 					</div>
 					<div class="link-title">
 						<h4>Contact</h4>
