--- a/code/glucocheck/homepage/static/base/style.css
+++ b/code/glucocheck/homepage/static/base/style.css
@@ -99,6 +99,12 @@
     flex-wrap: wrap;
 }
 
+.link-title small a {
+	text-decoration: none;
+    color: blue;
+    font-family: 'Quicksand', sans-serif;
+}
+
 .link-title small{
     font-size: 16px;
     color:cornflowerblue;
