--- a/code/glucocheck/homepage/static/homepage/style.css
+++ b/code/glucocheck/homepage/static/homepage/style.css
@@ -211,9 +211,17 @@
     margin-bottom: 20px;
     justify-content: space-between;
     flex-wrap: wrap;
+	font-size: 18px;
 }
+
+.link-title small a {
+	text-decoration: none;
+    color: blue;
+    font-family: 'Quicksand', sans-serif;
+}
+
 .link-title small{
-    font-size: 13px;
+    font-size: 16px;
     color:cornflowerblue;
 }
 /*End footer*/
