--- a/code/glucocheck/homepage/static/homepage/style.css
+++ b/code/glucocheck/homepage/static/homepage/style.css
@@ -205,15 +205,23 @@
     flex-wrap: wrap;
 }
 
-.link-title h4{
+.link-title h4 a{
     color: #fab3c4;
+	text-decoration: none;
     margin-bottom: 20px;
     justify-content: space-between;
     flex-wrap: wrap;
+	font-size: 18px;
+}
+
+.link-title small a {
+	text-decoration: none;
+    color: blue;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .link-title small{
-    font-size: 13px;
+    font-size: 16px;
     color:cornflowerblue;
 }
 /*End footer*/
