--- a/code/glucocheck/homepage/templates/base/base.html
+++ b/code/glucocheck/homepage/templates/base/base.html
@@ -56,7 +56,7 @@
 					</div>
 					<div class="link-title">
 						<h4>Contact</h4>
-						<small>support@glucocheck.com</small><br>
+						<small>support@glucocheck.com</small><br><br><br>
 						<small>Copyright © 2021 GlucoCheck</small>
 					</div>
 				</div>
