--- a/code/glucocheck/homepage/templates/widgets/CheckboxLink.html
+++ b/code/glucocheck/homepage/templates/widgets/CheckboxLink.html
@@ -1,5 +1,6 @@
-{% if widget.wrap_elem.tag != None %}<{{widget.wrap_elem.tag}}
-{% for name, value in widget.wrap_elem.attrs.items %}
+{% spaceless %}
+{% if wrap_elem.tag != None %}<{{wrap_elem.tag}}
+{% for name, value in wrap_elem.attrs.items %}
     {% if value is not False %} {{ name }}
          {% if value is not True %}="{{ value }}"{% endif %}
     {% endif %} 
@@ -8,20 +9,21 @@
 	  {% if widget.value != None %}
 	    value="{{ widget.value }}"
 	  {% endif %}
-	  {% include "django/forms/widgets/attrs.html" %} />{% if widget.wrap_elem.tag != None %}</{{widget.wrap_elem.tag}}>{% endif %}
-{% if widget.wrap_elem.tag != None %}<{{widget.wrap_elem.tag}}
-{% for name, value in widget.wrap_elem.attrs.items %}
+	  {% include "django/forms/widgets/attrs.html" %} />{% if wrap_elem.tag != None %}</{{wrap_elem.tag}}>{% endif %}
+{% if wrap_elem.tag != None %}<{{wrap_elem.tag}}
+{% for name, value in wrap_elem.attrs.items %}
     {% if value is not False %} {{ name }}
          {% if value is not True %}="{{ value }}"{% endif %}
     {% endif %}
-{% endfor %}>{% endif %}<p name="{{ widget.text.name }}" 
-{% for name, value in widget.text.attrs.items %}
+{% endfor %}>{% endif %}<p name="{{ text.name }}" 
+{% for name, value in text.attrs.items %}
     {% if value is not False %} {{ name }}
          {% if value is not True %}="{{ value }}"{% endif %}
     {% endif %}
-{% endfor %} >{{ widget.text.value }}{% if widget.link.attrs.href != None %}<a name="{{ widget.link.name }}"
-{% for name, value in widget.link.attrs.items %}
+{% endfor %} >{{ text.value }}{% if link.attrs.href != None %}<a name="{{link.name}}"
+{% for name, value in link.attrs.items %}
     {% if value is not False %} {{ name }}
-         {% if value is not True %}="{{ value }}"{% endif %}
+         {% if value is not True %}="{{value}}"{% endif %}
     {% endif %}
-{% endfor %} >{{ widget.link.value }}</a>{% endif %}</p>{% if widget.wrap_elem.tag != None %}</{{widget.wrap_elem.tag}}>{% endif %}
+{% endfor %} >{{ link.value }}</a>{% endif %}</p>{% if wrap_elem.tag != None %}</{{wrap_elem.tag}}>{% endif %}
+{% endspaceless %}
