Removed a print statement from the test view and disabled the tooltip on the progress circle

--- a/code/glucocheck/homepage/templates/test/test.html
+++ b/code/glucocheck/homepage/templates/test/test.html
@@ -108,6 +108,9 @@
 				
 				// Progress circle
 				chart2 = {
+					tooltip: {
+						enabled: false
+					},
 					chart: {
 						type: 'solidgauge',
 						events: {
@@ -153,7 +156,7 @@
 							}
 						  }
 						}]
-					  }]
+					  }],
 				};
 				
 				// Box Plot
