--- a/code/glucocheck/homepage/templates/dashboard2/index.html
+++ b/code/glucocheck/homepage/templates/dashboard2/index.html
@@ -13,6 +13,7 @@
         <script src = "https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/highcharts-more.js"></script>
 		<script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>
         <title>Dashboard GlucoCheck</title>
     </head>
     
@@ -103,7 +104,7 @@
               </section>
               <h1 id="welcome-title">Welcome Back, Username !</h1>
               <section id="grid-container">
-                <div class="container mt-5 mb-5" style="width: 400px">
+                <div class="container mt-5 mb-5" style="width: 400px"> <!---->
 					<div id="reportrange" style="background: #fff; cursor: pointer; padding:          5px 10px; border: 1px solid #ccc; width: 100%">
                         <i class="fa fa-calendar"></i>&nbsp;
                         <span id='dates'></span> <i class="fa fa-caret-down"></i>
