link of all forms to dashboard along with logout

--- a/code/glucocheck/homepage/templates/base/base.html
+++ b/code/glucocheck/homepage/templates/base/base.html
@@ -24,7 +24,7 @@
 				
                 <ul>
                     <li><a href="{% url 'homepage' %}">HOME</a></li>
-                    <li><a href="#">DASHBOARD</a></li>
+                    <li><a href="{% url 'dashboard' %}">DASHBOARD</a></li>
                     <li><a href="#">ABOUT US</a></li>
                     <li><a href="#">CONTACT</a></li>
                     <li><a href="#">GETTING STARTED</a></li>
