--- a/code/glucocheck/homepage/templates/homepage/homepage.html
+++ b/code/glucocheck/homepage/templates/homepage/homepage.html
@@ -18,7 +18,7 @@
                 <img src="{% static 'images/glucochecklogo.png' %}" class="logo">
                 <ul>
                     <li><a href="{% url 'homepage' %}">HOME</a></li>
-                    <li><a href="#">DASHBOARD</a></li>
+                    <li><a href="{% url 'dashboard' %}">DASHBOARD</a></li>
                     <li><a href="#">ABOUT US</a></li>
                     <li><a href="#">CONTACT</a></li>
                     <li><a href="#">GETTING STARTED</a></li>
