--- a/code/glucocheck/homepage/templates/dashboard2/index.html
+++ b/code/glucocheck/homepage/templates/dashboard2/index.html
@@ -61,11 +61,7 @@
                             <span class="nav__name">Analytics</span>
                         </a>
                         
-                        <a href="#" class="nav__link">
-                            <ion-icon name="settings-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Settings</span>
-                        
-                        </a>
+        
                         
                         <div  class="nav__link collapse">
                             <ion-icon name="person-circle-outline" class="nav__icon"></ion-icon>
@@ -76,7 +72,7 @@
                             <ul class="collapse__menu">
                                 <a href="#" class="collapse__sublink">ViewProfile</a>
                                 <a href="#" class="collapse__sublink">EditProfile</a>
-                                <a href="#" class="collapse__sublink">Payment</a>
+                                
                                 
                             </ul>
                         </div>
@@ -109,17 +105,19 @@
                         <i class="fa fa-calendar"></i>&nbsp;
                         <span id='dates'></span> <i class="fa fa-caret-down"></i>
                     </div>
-					
-					<div id='max' style = "height: 150px; width: 150px; float: left;"></div>
-					<div id='avg' style = "height: 150px; width: 150px; float: left;"></div>
-					<div id='min' style = "height: 150px; width: 150px; float: left;"></div>
-					<div id='hba1c' style = "height: 150px; width: 150px; float: left;"></div>
-					
+
+					<div class="circles">
+					<div id='max' style = "height: 180px; width: 180px; float: left;"></div>
+					<div id='avg' style = "height: 180px; width: 180px; float: left;"></div>
+					<div id='min' style = "height: 180px; width: 180px; float: left;"></div>
+					<div id='hba1c' style = "height: 180px; width: 180px; float: left;"></div>
+                    </div>
 					
                 </div>
-                <div id='percent_in_range' class="grid-item two"></div>
+                
+                <div class="grid-item two">Item 2</div>
                 <div id='box_chart' class="grid-item three"></div>
-                <div class="grid-item four">Item 4</div>
+                <div id='percent_in_range' class="grid-item two"></div>
 				<div id='insulin_bar_chart' class="grid-item five"></div>
 				<div class="grid-item six">Item 6</div>
 				<div class="grid-item seven">Item 7</div>
