--- a/code/glucocheck/homepage/templates/account/glucose.html
+++ b/code/glucocheck/homepage/templates/account/glucose.html
@@ -1,7 +1,8 @@
 {% load static %}
-
+img src="{% static 'images/arrow.png' %}">
 <h3>Add values here</h3>
-
+<p>Click below to add Carbs value</p>
+<a class="btn btn-primary" href="{% url 'carbs_input'%}">Change Password</a>
 
 
 
