--- a/code/glucocheck/homepage/templates/dashboard2/index.html
+++ b/code/glucocheck/homepage/templates/dashboard2/index.html
@@ -116,12 +116,18 @@
 					
                 </div>
                 
-                <div class="grid-item two">Item 2</div>
+                <div class="grid-item two">
+                    <h2>Last input data</h2>
+                        <h4>For Glucose: </h4>
+                        <h4>For Carbs: </h4>
+                        <h4>For Insulin: </h4>
+                
+                </div>
                 <div id='box_chart' class="grid-item three"></div>
                 <div id='percent_in_range' class="grid-item two"></div>
 				<div id='insulin_bar_chart' class="grid-item five"></div>
-				<div class="grid-item six">Item 6</div>
-				<div class="grid-item seven">Item 7</div>
+				<div id='percent_in_range_carbs' class="grid-item six"></div>
+				
               </section>
             </section>
         
