Added the carbohydrates in range graph and the last input date Added the redirect url when a user is not logged in and the view has the login_required decorator Added a user for demo-ing the forgot password functionality

--- a/code/glucocheck/homepage/templates/dashboard2/index.html
+++ b/code/glucocheck/homepage/templates/dashboard2/index.html
@@ -117,14 +117,13 @@
                 </div>
                 
                 <div class="grid-item two">
-                    <h2>Last input data</h2>
-                        <h4>For Glucose: </h4>
-                        <h4>For Carbs: </h4>
-                        <h4>For Insulin: </h4>
-                
+                    <h2>Last Input Data</h2>
+					<h4 id='last_glucose'></h4>
+					<h4 id='last_carb'></h4>
+					<h4 id='last_insulin'></h4>
                 </div>
                 <div id='box_chart' class="grid-item three"></div>
-                <div id='percent_in_range' class="grid-item two"></div>
+                <div id='percent_in_range_glucose' class="grid-item two"></div>
 				<div id='insulin_bar_chart' class="grid-item five"></div>
 				<div id='percent_in_range_carbs' class="grid-item six"></div>
 				
