arrows along with the link to other forms added in the input forms

--- a/code/glucocheck/homepage/templates/account/carbs.html
+++ b/code/glucocheck/homepage/templates/account/carbs.html
@@ -1,5 +1,9 @@
 {% load static %}
 
+<img src="{% static 'images/arrow.png' %}">
 <h3>Add values here</h3>
 
-
+<p>Click below to add Glucose value</p>
+<a class="btn btn-primary" href="{% url 'glucose_input'%}">Glucose Input Form</a>
+<p>Click below to add Insulin value</p>
+<a class="btn btn-primary" href="{% url 'insulin_input'%}">Insulin Input Form</a>
