--- a/code/glucocheck/homepage/templates/account/glucose.html
+++ b/code/glucocheck/homepage/templates/account/glucose.html
@@ -1,8 +1,11 @@
 {% load static %}
-img src="{% static 'images/arrow.png' %}">
+<img src="{% static 'images/arrow.png' %}">
 <h3>Add values here</h3>
+
 <p>Click below to add Carbs value</p>
-<a class="btn btn-primary" href="{% url 'carbs_input'%}">Change Password</a>
+<a class="btn btn-primary" href="{% url 'carbs_input'%}">Carb Input Form</a>
+<p>Click below to add Insulin value</p>
+<a class="btn btn-primary" href="{% url 'insulin_input'%}">Insulin Input Form</a>
 
 
 
