--- a/code/glucocheck/homepage/templates/dashboard2/index.html
+++ b/code/glucocheck/homepage/templates/dashboard2/index.html
@@ -62,7 +62,7 @@
                             <span class="nav__name">Analytics</span>
                         </a>
                         
-        
+                        
                         
                         <div  class="nav__link collapse">
                             <ion-icon name="person-circle-outline" class="nav__icon"></ion-icon>
@@ -71,8 +71,7 @@
                             <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
 
                             <ul class="collapse__menu">
-                                <a href="#" class="collapse__sublink">ViewProfile</a>
-                                <a href="#" class="collapse__sublink">EditProfile</a>
+                                <a href="{% url 'profile_page' %}" class="collapse__sublink">EditProfile</a>
                                 
                                 
                             </ul>
