Added the username to the dashboard page

--- a/code/glucocheck/homepage/templates/dashboard2/index.html
+++ b/code/glucocheck/homepage/templates/dashboard2/index.html
@@ -98,7 +98,7 @@
                   </div>
                 </div>
               </section>
-              <h1 id="welcome-title">Welcome Back, Username !</h1>
+              <h1 id="welcome-title">Welcome Back, {{username}} !</h1>
               <section id="grid-container">
                 <div class="container mt-5 mb-5" style="width: 400px"> <!---->
 					<div id="reportrange" style="background: #fff; cursor: pointer; padding:          5px 10px; border: 1px solid #ccc; width: 100%">
